fixing overflow error

--- a/new-website/src/App.css
+++ b/new-website/src/App.css
@@ -146,3 +146,8 @@
 .animate-slide-out {
   animation: slideOut 0.3s forwards;
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
